--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,12 @@
             <version>1.18.22</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.mailosaur</groupId>
+            <artifactId>mailosaur-java</artifactId>
+            <version>7.12.0</version>
+        </dependency>
+
 
 
     </dependencies>
